@@ -1,6 +1,7 @@
 201x-xx-xx:
     * version 3.5
     * Make hlsearch the default search highlighting option
+      and use Firefox's native method
 
 2012-04-02: It's not an April's fool
     * version 3.4
